feat: enforce LoopSpec v2 behavior acceptance