@@ -52,23 +52,26 @@ public class LoopperMcpTools {
     public Map<String, Object> proposeLoopSpec(
             @ToolParam(description = "Read-only Designer session identifier", required = true) String designerSessionId,
             @ToolParam(description = "Registered project identifier", required = true) String projectId,
-            @ToolParam(description = "Complete LoopSpec v1 to persist unchanged", required = true) LoopSpec spec) {
+            @ToolParam(description = "Complete LoopSpec v2 to persist unchanged", required = true) LoopSpec spec) {
         String sessionId = requiredText(designerSessionId, "DESIGNER_SESSION_ID_REQUIRED", "designerSessionId");
         String normalizedProjectId = requiredText(projectId, "PROJECT_ID_REQUIRED", "projectId");
-        requireReadOnlyDesigner(sessionId, normalizedProjectId);
+        var designerSession = requireReadOnlyDesigner(sessionId, normalizedProjectId);
         if (spec == null) throw new BadRequestException("LOOPSPEC_REQUIRED", "spec must be a complete LoopSpec JSON object");
         if (!normalizedProjectId.equals(spec.projectId())) {
             throw new BadRequestException("LOOPSPEC_PROJECT_MISMATCH", "spec.projectId must match projectId");
         }
-        List<String> errors = drafts.validationErrors(spec, true);
-        if (!errors.isEmpty()) throw new BadRequestException("LOOPSPEC_INVALID", String.join("; ", errors));
+        boolean persistedLegacy = designerSession.loopDraftId() != null
+                && "v1".equals(drafts.spec(drafts.get(designerSession.loopDraftId())).schemaVersion());
+        var assessment = drafts.assessment(spec, true, persistedLegacy);
+        if (!assessment.valid()) throw new BadRequestException("LOOPSPEC_INVALID", String.join("; ", assessment.errors()));
         LoopDraftRow draft = designerSessions.syncLoopSpec(sessionId, spec);
         return Map.of("designerSessionId", sessionId, "draft", draft, "spec", spec, "status", draft.status(),
+                "assessment", assessment,
                 "requiresHumanConfirmation", true,
                 "nextStep", "Review and confirm the draft through the Loop Draft REST workflow before calling create_task.");
     }
 
-    @Tool(name = "validate_loop_spec", description = "Validate a LoopSpec v1 as spec, or validate a persisted draftId paired with its exact version")
+    @Tool(name = "validate_loop_spec", description = "Validate a new LoopSpec v2, or validate a persisted v1/v2 draftId paired with its exact version")
     public Map<String, Object> validateLoopSpec(
             @ToolParam(description = "LoopSpec v1 to validate; omit when validating a persisted draft", required = false) LoopSpec spec,
             @ToolParam(description = "Persisted LoopSpec draft identifier; supply together with version", required = false) String draftId,
@@ -79,10 +82,10 @@ public class LoopperMcpTools {
                 return Map.of("valid", false, "errors", List.of("version: must match the current draft version"),
                         "draftId", draft.id(), "version", draft.version());
             }
-            return validationResult(drafts.spec(draft), draft.id(), version);
+            return validationResult(drafts.spec(draft), draft.id(), version, true);
         }
         if (spec == null) return Map.of("valid", false, "errors", List.of("spec or draftId/version is required"));
-        return validationResult(spec, null, null);
+        return validationResult(spec, null, null, false);
     }
 
     @Tool(name = "create_task", description = "Create or return the one task for a CONFIRMED draft; switch the registered checkout to a serialized Task branch when Git HEAD exists, otherwise use the registered directory directly; this never auto-confirms a draft")
@@ -107,10 +110,19 @@ public class LoopperMcpTools {
         return Map.of("task", task, "stages", tasks.stages(id), "attempts", tasks.attempts(id), "errors", tasks.errors(id));
     }
 
-    private Map<String, Object> validationResult(LoopSpec spec, String draftId, Long version) {
-        List<String> errors = drafts.validationErrors(spec, true);
-        return draftId == null ? Map.of("valid", errors.isEmpty(), "errors", errors)
-                : Map.of("valid", errors.isEmpty(), "errors", errors, "draftId", draftId, "version", version);
+    private Map<String, Object> validationResult(LoopSpec spec, String draftId, Long version, boolean allowLegacy) {
+        var assessment = drafts.assessment(spec, true, allowLegacy);
+        Map<String, Object> result = new java.util.LinkedHashMap<>();
+        result.put("valid", assessment.valid());
+        result.put("schemaVersion", assessment.schemaVersion());
+        result.put("legacy", assessment.legacy());
+        result.put("errors", assessment.errors());
+        result.put("stageAssessments", assessment.stageAssessments());
+        if (draftId != null) {
+            result.put("draftId", draftId);
+            result.put("version", version);
+        }
+        return java.util.Collections.unmodifiableMap(result);
     }
 
     private TaskRow createTaskIdempotently(LoopDraftRow draft) {
@@ -122,7 +134,7 @@ public class LoopperMcpTools {
         }
     }
 
-    private void requireReadOnlyDesigner(String designerSessionId, String projectId) {
+    private io.opencode.loopper.persistence.DesignerSessionRow requireReadOnlyDesigner(String designerSessionId, String projectId) {
         var session = designerSessions.get(designerSessionId);
         if (!projectId.equals(session.projectId())) {
             throw new BadRequestException("DESIGNER_PROJECT_MISMATCH", "Designer session is not registered for projectId");
@@ -130,6 +142,7 @@ public class LoopperMcpTools {
         if (!DesignerSessionService.READ_ONLY.equals(session.accessMode())) {
             throw new ConflictException("DESIGNER_ACCESS_MODE_INVALID", "Designer session must use READ_ONLY access mode");
         }
+        return session;
     }
 
     private String requiredText(String value, String code, String field) {
